# automated-security-helper

./: .ash.yaml  .coveragerc  .dockerignore  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  404.html  BUG_ANALYSIS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  FIXES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MCP_CONNECTION_FIX.md  README.md  README.md.template  ROOT_CAUSE_FOUND.md  SECURITY.md  UNUSED_SUPPRESSIONS_FEATURE.md  aggregated_results.txt  ash  ash-integration-jq-priority.patch  ash-multi  ash.yaml  ash_mcp_server.py  bandit.yaml  commit-message.txt  commit_msg.txt  devfile.yaml  faq.md.template  hatch_build.py  index.html  index.md.template  mkdocs.yml  pre-commit-hooks.yaml  pyproject.toml  pytest.ini  (+3 more)
.ash/: .ash.yaml  .ash_community_plugins.yaml  .ash_no_ignore.yaml  .checkov.yaml  .gitignore  .grype.yaml  .secrets.baseline  bandit.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
Formula/: ash.rb
appsec_cfn_rules/: IamUserExistsRule.rb  KeyPairAsCFnParameterRule.rb  ResourcePolicyStarAccessVerbPolicyRule.rb  StarResourceAccessPolicyRule.rb
ash-agent-plugins/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
ash-agent-plugins/agentic-coding/transpiler/: README.md  configs.yaml  pyproject.toml  schema.py  transpile.py  validate.py
ash-agent-plugins/agentic-coding/transpiler/_base/: cli_versions.json  manifest.json
ash-agent-plugins/agentic-coding/transpiler/_base/agents/: security-scanner.md
ash-agent-plugins/agentic-coding/transpiler/_base/commands/: results.md  scan.md
ash-agent-plugins/agentic-coding/transpiler/generated_models/: __init__.py  amazonq_agent.py  continue_config.py  mcpb_manifest.py
ash-agent-plugins/agentic-coding/transpiler/schemas/: amazonq-agent.schema.json  continue-config.schema.json  gemini-settings.schema.json  mcpb-manifest.schema.json  opencode-config.schema.json  refresh.sh  schemas.json
ash-agent-plugins/agentic-coding/transpiler/templates/: skill.md.j2
ash-agent-plugins/agentic-coding/transpiler/templates/aider/: CONVENTIONS.md.j2
ash-agent-plugins/agentic-coding/transpiler/templates/claude/: CLAUDE.md.j2  agent_frontmatter.j2  command_frontmatter.j2
ash-agent-plugins/agentic-coding/transpiler/templates/codex/: skill_frontmatter.j2
ash-agent-plugins/agentic-coding/transpiler/templates/continue/: mcp_servers.yaml.j2  rule_frontmatter.j2
ash-agent-plugins/agentic-coding/transpiler/templates/copilot/: agent_frontmatter.j2  copilot-instructions.md.j2  prompt_frontmatter.j2
ash-agent-plugins/agentic-coding/transpiler/templates/cursor/: AGENTS.md.j2  mdc_frontmatter.j2
ash-agent-plugins/agentic-coding/transpiler/templates/gemini/: GEMINI.md.j2
ash-agent-plugins/agentic-coding/transpiler/templates/goose/: extension.yaml.j2  goosehints.j2
ash-agent-plugins/agentic-coding/transpiler/templates/kiro/: POWER_frontmatter.j2
ash-agent-plugins/agentic-coding/transpiler/templates/opencode/: agent_frontmatter.j2  command_frontmatter.j2
ash-agent-plugins/agentic-coding/transpiler/templates/roo/: roomodes.j2
ash-agent-plugins/agentic-coding/transpiler/templates/shared/: install_header.sh.j2
ash-agent-plugins/agentic-coding/transpiler/templates/windsurf/: rule_frontmatter.j2
ash-agent-plugins/agentic-coding/transpiler/tests/: test_invoke_validator_hard_fails.py
ash-agent-plugins/agentic-coding/transpiler/tools/: __init__.py  generate_models.py  refresh_schemas.py  zod_to_json_schema.mjs
ash-agent-plugins/agentic-coding/transpiler/transpiler/: __init__.py  cli.py  cli_tools.py  core.py  emitters.py  formats.py  install_scripts.py  jinja_renderer.py  manifest_builders.py  mcp_builders.py  orchestrator.py  packagers.py  registry.py
ash-agent-plugins/agentic-coding/transpiler/transpiler/backends/: __init__.py  aider.py  amazonq.py  claude.py  cline.py  codex.py  continue_dev.py  copilot.py  cursor.py  gemini.py  goose.py  kiro.py  mcpb.py  opencode.py  roo.py  windsurf.py
ash-agent-plugins/agentic-coding/transpiler/transpiler/backends/aider/: __init__.py
ash-agent-plugins/agentic-coding/transpiler/transpiler/backends/amazonq/: __init__.py
ash-agent-plugins/agentic-coding/transpiler/transpiler/backends/claude/: __init__.py
ash-agent-plugins/agentic-coding/transpiler/transpiler/backends/cline/: __init__.py
ash-agent-plugins/agentic-coding/transpiler/transpiler/backends/codex/: __init__.py
ash-agent-plugins/agentic-coding/transpiler/transpiler/backends/continue_dev/: __init__.py
ash-agent-plugins/agentic-coding/transpiler/transpiler/backends/copilot/: __init__.py
ash-agent-plugins/agentic-coding/transpiler/transpiler/backends/cursor/: __init__.py
ash-agent-plugins/agentic-coding/transpiler/transpiler/backends/gemini/: __init__.py
ash-agent-plugins/agentic-coding/transpiler/transpiler/backends/generic_skill/: __init__.py
ash-agent-plugins/agentic-coding/transpiler/transpiler/backends/goose/: __init__.py
ash-agent-plugins/agentic-coding/transpiler/transpiler/backends/kiro/: __init__.py
ash-agent-plugins/agentic-coding/transpiler/transpiler/backends/mcpb/: __init__.py
ash-agent-plugins/agentic-coding/transpiler/transpiler/backends/opencode/: __init__.py
ash-agent-plugins/agentic-coding/transpiler/transpiler/backends/roo/: __init__.py
ash-agent-plugins/agentic-coding/transpiler/transpiler/backends/windsurf/: __init__.py
asharp/: asharp.py
automated_security_helper/: __init__.py
ci/: generate_commit_pointer.py  stage_build_assets.py
contributing/: index.html
docs/: VERSION_MANAGEMENT.md  advanced-usage.md.template  installation-guide.md.template  migration-guide.md.template  quick-start-guide.md.template
examples/ash_plugins_example/: .gitignore  README.md  __init__.py  converter.py  pyproject.toml  reporter.py  scanner.py
examples/ash_plugins_example/.ash/: .ash.yaml
examples/ash_plugins_example/my_ash_plugins/: __init__.py  converter.py  reporter.py  scanner.py
faq/: index.html
helper_dockerfiles/: Dockerfile-cdk  Dockerfile-git  Dockerfile-grype  Dockerfile-js  Dockerfile-py  (+1 more)
(+1239 files in other folders)
