[tool.poetry]
name = "automated-security-helper"
version = "3.0.0"
description = "Automated Security Helper for GitHub Actions"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/awslabs/automated-security-helper"
authors = [
  "Daniel Begimher <dbbegimh@amazon.com>",
  "Madison Steiner <awsmadi@amazon.com>",
  "Nate Ferrell <nateferl@amazon.com>",
  "Nathan Bates <nbb@amazon.com>",
  "Rafael Pereyra <rapg@amazon.com>",
  "Tim Hahn <timhahn@amazon.com>",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

packages = [
  {include = "automated_security_helper"},
]
include = [
    { path = "automated_security_helper/assets", format = ["sdist", "wheel"] },
    { path = "automated_security_helper/assets/ASH_INSTALLED_REVISION", format = ["sdist", "wheel"] },  # pragma: allowlist secret - Not actually a secret
    { path = "automated_security_helper/assets/Dockerfile", format = ["sdist", "wheel"] },
]

[tool.poetry.build]
script = "ci/stage_build_assets.py"

[tool.poetry.scripts]
ash = "automated_security_helper.cli.main:app"
ashv3 = "automated_security_helper.cli.main:app"
automated-security-helper = "automated_security_helper.cli:ash_cli"
generate-ash-schemas = 'automated_security_helper.schemas.generate_schemas:main'
get-scan-set = 'automated_security_helper.utils.get_scan_set:main'

[tool.poetry.requires-plugins]
poetry-plugin-export = "*"


[tool.poetry.dependencies]
python = "^3.10"

# Pin problematic transitive dependencies to avoid backtracking
requests = ">=2.28.0,<3.0.0"
attrs = ">=23.1.0,<26.0.0"
jsonschema = ">=4.17.0,<5.0.0"
importlib-metadata = ">=6.0.0,<8.0.0"
cattrs = ">=22.1.0,<25.0.0"
docker = ">=6.0.1,<8.0.0"
GitPython = ">=3.1.30,<4.0.0"
gitdb = ">=4.0.1,<5.0.0"
pyrsistent = ">=0.18.0,<1.0.0"

# Core ASH dependencies
pydantic = {extras = ["email"], version = "^2.11.3"}
typer = "^0.16.0"
rich = "^13.5.3"
pathspec = "^0.12.1"
defusedxml = "^0.7.1"
junitparser = "^3.2.0"
textual = "^3.2.0"

# Scanner dependencies with compatible versions
bandit = {extras = ["baseline", "sarif", "toml"], version = "^1.8.3"}
detect-secrets = "^1.5.0"
semgrep = "^1.125.0"

# Use more compatible versions for heavy dependencies
checkov = ">=3.2.0,<4.0.0"
aws-cdk-lib = ">=2.150.0,<3.0.0"
cdk-nag = ">=2.28.0,<3.0.0"
constructs = ">=10.3.0,<11.0.0"
boto3 = ">=1.34.0,<2.0.0"

# Converter dependencies
cfn-flip = "^1.3.0"
nbconvert = "^7.16.6"
jupyterlab = ">=4.0.0,<5.0.0"

# [tool.poetry.dependencies]
# aws-cdk-lib = ">=2.200.2,<3.0.0"
# bandit = {extras = ["baseline", "sarif", "toml"], version = ">=1.8.3,<2.0.0"}
# cdk-nag = ">=2.35.100,<3.0.0"
# cfn-flip = ">=1.3.0,<2.0.0"
# checkov = ">=3.2.439,<4.0.0"
# constructs = ">=10.4.2,<11.0.0"
# defusedxml = ">=0.7.1,<1.0.0"
# junitparser = ">=3.2.0,<4.0.0"
# nbconvert = ">=7.16.6,<8.0.0"
# pathspec = ">=0.12.1,<1.0.0"
# pydantic = {extras = ["email"], version = ">=2.11.3,<3.0.0"}
# python = ">=3.10,<4.0.0"
# rich = ">=13.5.3,<14.0.0"
# semgrep = ">=1.125.0,<2.0.0"
# typer = ">=0.16.0,<1.0.0"
# detect-secrets = ">=1.5.0,<2.0.0"
# jupyterlab = ">=4.4.2,<5.0.0"
# boto3 = ">=1.35.49,<2.0.0" # Limited by Checkov
# textual = ">=3.2.0,<4.0.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.11.2,<1.0.0"
pytest = ">=8.3.5,<9.0.0"
pytest-cov = ">=6.1.0,<7.0.0"
pytest-mock = ">=3.14.0,<4.0.0"
mypy = ">=1.15.0,<2.0.0"
types-pyyaml = ">=6.0.12.20250402"
lazydocs = ">=0.4.8,<1.0.0"
mkdocs = ">=1.6.1,<2.0.0"
mkdocs-material = ">=9.6.11,<10.0.0"
pymdown-extensions = ">=10.14.3,<11.0.0"
mkdocstrings = {extras = ["python"], version = ">=0.29.1,<1.0.0"}
mkdocs-autorefs = ">=1.4.1,<2.0.0"
pytest-asyncio = ">=0.26.0,<1.0.0"
types-boto3 = {extras = ["essential", "logs", "s3", "securityhub", "securitylake", "sts"], version = ">=1.35.49,<2.0.0"}
mkdocs-awesome-nav = ">=3.1.2,<4.0.0"
mkdocs-mermaid2-plugin = ">=1.2.1,<2.0.0"
pytest-xdist = ">=3.7.0,<4.0.0"

[tool.mypy]
plugins = ["pydantic.mypy"]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_reexport = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
