[project]
name = "agentic-plugin-transpiler"
version = "0.1.0"
description = "Transpile a single _base/ source-of-truth into plugin packages for 14 AI coding agent platforms (Claude Code, Codex CLI, Kiro, GitHub Copilot, OpenCode, Cursor, Windsurf, Cline, Roo Code, Continue.dev, Gemini CLI, Goose, Amazon Q, Aider)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "AWS Labs", url = "https://github.com/awslabs/automated-security-helper" }]
dependencies = [
    "jinja2>=3.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "python-frontmatter>=1.1",
]

[project.scripts]
transpile = "transpile:main"
refresh-schemas = "tools.refresh_schemas:main"
generate-models = "tools.generate_models:main"

[project.optional-dependencies]
# Refresh-time tooling — only needed when running refresh-schemas or generate-models.
# CI normally just runs `transpile --check` against vendored schemas + models.
refresh = [
    "datamodel-code-generator[http]>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
